--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,14 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.23</version>
+            <scope>provided</scope>
+            
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
             <version>2.8.0</version>
+          
         </dependency>
     </dependencies>
     
